Fixed carousel component's CSS to make it so it doesn't overflow parent container

--- a/frontend/wwwroot/scss/base/interactive_elements.scss
+++ b/frontend/wwwroot/scss/base/interactive_elements.scss
@@ -542,7 +542,7 @@ table tbody tr.active-row {
 
 .carousel-content {
     display: flex;
-    gap: 20px; /* Consistent gap calculation */
+    gap: 50px; /* Consistent gap calculation */
     padding: 10px 50px;
     width: 100%;
     height: 100%;
@@ -574,7 +574,8 @@ table tbody tr.active-row {
     // max-width: 100%;
     // display: inline-block;
     @extend %flex--row--center;
-    flex: 0 0 100%; // Each item occupies 100% of viewport width, does not shrink or grow
+    flex-shrink: 0;
+    // flex: 0 0 100%; // Each item occupies 100% of viewport width, does not shrink or grow
 
     background-color: #FFF;
     // display: inline-block;
@@ -582,7 +583,7 @@ table tbody tr.active-row {
     > * {
         pointer-events: none;
         width: 100%;
-        height: auto;
+        height: 100%;
         object-fit: contain; // maintain aspect ratio
     }
 }
